--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
     </nav>
 
     <section class="b_style" id="home">
-        <h1 class="h_primary">Mount Deomali</h1>
+        <h1 style="padding-top: 100px;" class="h_primary">Mount Deomali</h1>
         <h3 class="text_style">Odisha's highest peak</h3>
+        <img src="Deomali.png" alt="">
     </section>
     <br><br><br><br><br><br>
     <br><br><br><br><br><br>
